# heatpump-rs

./: .env.default  .gitignore  Cargo.toml  build.rs  espflash.toml  readme.md  sdkconfig.defaults
.cargo/: config.toml
client/: index.html
src/: config.rs  led.rs  main.rs  server.rs  wifi.rs
