[package]
name = "heatpump-rs"
version = "0.1.0"
authors = ["surfingreg"]
edition = "2021"
# resolver = "2"
# rust-version = "1.77"

[[bin]]
name = "heatpump-rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

# [profile.release]
# opt-level = "s"

# [profile.dev]
# debug = true    # Symbols are nice and they don't increase the size on Flash
# opt-level = "z"

# [features]
# default = ["std", "embassy", "esp-idf-svc/native"]
# experimental = ["esp-idf-svc/experimental"]
# std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
# embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
# alloc = ["esp-idf-svc/alloc"]

[dependencies]
log = { version = "0.4", default-features = false }
# esp-idf-svc = { version = "0.49.1", default-features = false }
# embedded-svc = "0.28.0"
tokio = { version = "1.42.*", features = ["rt", "net", "io-util", "macros", "rt-multi-thread"]}
axum = { version="0.7.9", features = ["http2", "json", "ws"] }
anyhow = "1.0.82"
serde = "1.0.216"
serde_json = "1.0.134"
futures = "0.3.31"
include_dir = "0.7.4"
heapless = "0.8.0"

[dependencies.esp-idf-svc]
version = "0.49.1"
default-features = false
features = ["std", "alloc", "native", "binstart", "embassy-sync", "critical-section", "embassy-time-driver"]

[build-dependencies]
embuild = { version="0.32.0", features = ["espidf"]}
# cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
dotenv-build = "0.1.1"
