[package]
name = "heatpump-rs"
version = "0.1.0"
authors = ["surfingreg"]
edition = "2021"

[[bin]]
name = "heatpump-rs"
harness = false

[dependencies]
log = { version = "0.4", default-features = false }
tokio = { version = "1.42.*", features = ["rt", "net", "io-util", "macros", "rt-multi-thread"]}
axum = { version="0.7.9", features = ["http2", "json", "ws"] }
anyhow = "1.0.82"
serde = "1.0.216"
serde_json = "1.0.134"
futures = "0.3.31"
include_dir = "0.7.4"
heapless = "0.8.0"

[dependencies.esp-idf-svc]
version = "0.49.1"
default-features = false
features = ["std", "alloc", "native", "binstart", "embassy-sync", "critical-section", "embassy-time-driver"]

[build-dependencies]
embuild = { version="0.32.0", features = ["espidf"]}
cc = "=1.1.30"
dotenv-build = "0.1.1"
